--- a/gene/.eslintrc
+++ b/gene/.eslintrc
@@ -5,6 +5,8 @@
         "semi": ["error","never"],
         "no-console": ["error", {"allow": ["log"]}],
         "arrow-body-style": ["error","always"],
-        "arrow-parens": ["error","as-needed"]
+        "arrow-parens": ["error","as-needed"],
+        "class-methods-use-this": ["error", { "exceptMethods": ["_write"]}],
+        "object-curly-newline": ["error", { "multiline": true }]
     }
 }
