--- a/gene/.eslintrc
+++ b/gene/.eslintrc
@@ -9,6 +9,7 @@
     "class-methods-use-this": ["error", { "exceptMethods": ["_write"] }],
     "object-curly-newline": ["error", { "multiline": true }],
     "no-await-in-loop": "off",
-    "no-restricted-syntax": "off"
+    "no-restricted-syntax": "off",
+    "no-restricted-globals": "off"
   }
 }
