--- a/gene/package.json
+++ b/gene/package.json
@@ -4,7 +4,7 @@
   "description": "Retrieve gene ontology annotations for a gene identifier",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Siddhartha Basu",
   "license": "ISC",
@@ -18,6 +18,8 @@
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-plugin-import": "^2.13.0",
     "husky": "^1.0.1",
+    "ioredis-mock": "^4.1.1",
+    "jest": "^23.6.0",
     "lint-staged": "^7.2.0",
     "prettier": "^1.13.7"
   },
